// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fulfilled() 1`] = `
Object {
  "fulfilled": true,
  "pending": false,
  "reason": null,
  "refreshing": false,
  "rejected": false,
  "value": null,
}
`;

exports[`fulfilled() 2`] = `
Object {
  "fulfilled": true,
  "pending": false,
  "reason": null,
  "refreshing": false,
  "rejected": false,
  "value": "foo",
}
`;

exports[`fulfilled() 3`] = `
Object {
  "fulfilled": true,
  "pending": false,
  "reason": null,
  "refreshing": false,
  "rejected": false,
  "value": "foo",
}
`;

exports[`pending() 1`] = `
Object {
  "fulfilled": false,
  "pending": true,
  "reason": null,
  "refreshing": false,
  "rejected": false,
  "value": null,
}
`;

exports[`refreshing() 1`] = `
Object {
  "fulfilled": false,
  "pending": true,
  "reason": null,
  "refreshing": true,
  "rejected": false,
  "value": null,
}
`;

exports[`refreshing() 2`] = `
Object {
  "fulfilled": true,
  "pending": false,
  "reason": null,
  "refreshing": true,
  "rejected": false,
  "value": "foo",
}
`;

exports[`rejected() 1`] = `
Object {
  "fulfilled": false,
  "pending": false,
  "reason": null,
  "refreshing": false,
  "rejected": true,
  "value": null,
}
`;

exports[`rejected() 2`] = `
Object {
  "fulfilled": false,
  "pending": false,
  "reason": "Test Error!",
  "refreshing": false,
  "rejected": true,
  "value": null,
}
`;

exports[`rejected() 3`] = `
Object {
  "fulfilled": false,
  "pending": false,
  "reason": [Error: Test Error!],
  "refreshing": false,
  "rejected": true,
  "value": null,
}
`;
